# MiniUdmAsyncErrorTracing

./: .bazelrc  .gitignore  .golangci.yml  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MODULE.bazel  Makefile  README.md  applyImage.go  applyPatch.go  commonUtility.go  go.mod  sample.go  startSymptionCollection.go
.github/workflows/: ci.yml
cmd/apply-patch/: BUILD.bazel  main.go
cmd/list-deployments/: BUILD.bazel  main.go
cmd/symptom-collection/: BUILD.bazel  main.go
configs/: config.yaml
docs/: ARCHITECTURE.md  BAZEL.md  GETTING_STARTED.md
examples/: list_deployments.go
internal/logger/: BUILD.bazel  logger.go
pkg/config/: BUILD.bazel  config.go
pkg/kubernetes/: BUILD.bazel  client.go
pkg/patch/: BUILD.bazel  patch.go
pkg/symptom/: BUILD.bazel  collector.go
pkg/utils/: BUILD.bazel  command.go  file.go  hash.go  time.go  utils_test.go
scripts/: update-bazel.sh
