module(
    name = "miniumd",
    version = "0.1.0",
)

# Bazel rules
bazel_dep(name = "rules_go", version = "0.44.0")
bazel_dep(name = "gazelle", version = "0.33.0")

# Use go_deps extension for Go dependency management
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")

# Load go.mod for dependency management
go_deps.from_file(go_mod = "//:go.mod")

use_repo(
    go_deps,
    "com_github_spf13_cobra",
    "com_github_spf13_viper",
    "go_uber_org_zap",
    "io_k8s_api_apps_v1",
    "io_k8s_api_core_v1",
    "io_k8s_apimachinery_pkg_apis_meta_v1",
    "io_k8s_client_go_kubernetes",
    "sigs_k8s_io_controller_runtime_pkg_config",
)

