load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "list_deployments_lib",
    srcs = ["main.go"],
    importpath = "github.com/Ricky512227/MiniUdmAsyncErrorTracing/cmd/list-deployments",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/logger",
        "//pkg/config",
        "//pkg/kubernetes",
        "//pkg/utils",
        "@com_github_spf13_cobra//:cobra",
        "@go_uber_org_zap//:zap",
    ],
)

go_binary(
    name = "list-deployments",
    embed = [":list_deployments_lib"],
    visibility = ["//visibility:public"],
)

