load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "symptom_collection_lib",
    srcs = ["main.go"],
    importpath = "github.com/Ricky512227/MiniUdmAsyncErrorTracing/cmd/symptom-collection",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/logger",
        "//pkg/config",
        "//pkg/kubernetes",
        "//pkg/symptom",
        "@com_github_spf13_cobra//:cobra",
        "@go_uber_org_zap//:zap",
    ],
)

go_binary(
    name = "symptom-collection",
    embed = [":symptom_collection_lib"],
    visibility = ["//visibility:public"],
)

